--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,7 @@
     <string name="toast_permission_granted">Permission granted, please try again</string>
     <string name="toast_permission_denied">WalkInThePark requires permission to continue!</string>
     <string name="toast_denied_checkpoints">Please complete current checkpoint to unlock</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
